--- a/Lab-4/task-4.html
+++ b/Lab-4/task-4.html
@@ -25,7 +25,7 @@
     function checkMatch() {
       const p1 = document.getElementById("pass1").value;
       const p2 = document.getElementById("pass2").value;
-      const msg = p1 === p2 ? "Passwords match ✅" : "Passwords do not match ❌";
+      const msg = p1 === p2 ? "Passwords match" : "Passwords do not match";
       document.getElementById("matchMsg").innerText = msg;
     }
   </script>
